--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,12 @@
 {
     "[python]": {
         "editor.defaultFormatter": "ms-python.black-formatter",
-        "editor.formatOnSave": true
+        "editor.formatOnSave": true,
     },
     "python.formatting.provider": "none",
     "python.linting.enabled": false,
+    "black-formatter.args": [
+        "--line-length",
+        "88"
+    ]
 }
